--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.browser:browser:1.2.0'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'androidx.work:work-runtime:2.3.3'
+//    implementation 'androidx.work:work-runtime:2.3.3'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.core:core-ktx:1.2.0'
