--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,11 +118,10 @@
                 android:resource="@xml/refresh_widget_info" />
         </receiver>
         <receiver
-            android:name=".receivers.BootReceiver"
+            android:name=".receivers.CheckSubstitutionPlanReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.DATE_CHANGED" />
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
