--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.ritesh:ratiolayout:1.0.0'
     implementation 'com.github.mehrdadsafari:ZadakNotification:0.0.2'
+    implementation 'com.github.stephenvinouze:shapetextdrawable:1.0.0'
 
     //Image Slider (see ColoRushFragment)
     implementation 'com.squareup.picasso:picasso:2.3.2'
