added more shortcuts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
 
             <meta-data
                 android:name="android.app.shortcuts"
-                android:resource="@xml/shortcut_website" />
+                android:resource="@xml/shortcuts" />
         </activity>
         <activity
             android:name=".ui.activities.SignInActivity"
