--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,9 +75,9 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
 
-            <meta-data
-                android:name="android.app.shortcuts"
-                android:resource="@xml/shortcuts" />
+            <!--            <meta-data-->
+            <!--                android:name="android.app.shortcuts"-->
+            <!--                android:resource="@xml/shortcuts" />-->
         </activity>
         <activity
             android:name=".ui.activities.SignInActivity"
