added room plan

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,8 +115,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.ritesh:ratiolayout:1.0.0'
     implementation 'com.github.stephenvinouze:shapetextdrawable:1.0.0'
-    implementation 'com.github.onlylemi:mapview:v1.0'
-//    implementation 'com.github.ninepatch:IndoorMapView:Tag'
+    implementation 'com.github.AbdAllahAbdElFattah13:MapView:master-SNAPSHOT'
 
     //Image Slider (see ColoRushFragment)
     implementation 'com.squareup.picasso:picasso:2.3.2'
