added teacherlist activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.activities.TeacherlistActivity"
+            android:label="@string/menu_teacher_list" />
+        <activity
             android:name=".SubstitutionTimeTableActivity"
             android:label="@string/timetable">
             <intent-filter>
