--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:label="@string/menu_teacher_list" />
         <activity
             android:name=".ui.activities.SubstitutionTimeTableActivity"
-            android:label="@string/timetable">
+            android:label="@string/timetable"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,21 +46,16 @@
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.activities.AppIntroActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.activities.AppIntroActivity" />
         <activity
             android:name=".ui.activities.RoomPlanActivity"
-            android:label="@string/room_plan"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/room_plan" />
         <activity
             android:name=".ui.activities.AboutActivity"
-            android:label="@string/title_activity_about"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_about" />
         <activity
             android:name=".ui.activities.ProfileActivity"
-            android:label="@string/title_activity_profile"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_profile" />
         <activity
             android:name=".ui.activities.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
@@ -74,20 +70,15 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
 
-            <!-- <meta-data -->
-            <!-- android:name="android.app.shortcuts" -->
-            <!-- android:resource="@xml/shortcuts" /> -->
         </activity>
         <activity
             android:name=".ui.activities.SignInActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_sign_in"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_sign_in" />
         <activity
             android:name=".ui.activities.WebsiteActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -102,8 +93,7 @@
         <activity
             android:name=".ui.activities.ChoiceActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_choice"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_choice" />
         <activity
             android:name=".ui.activities.SettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
@@ -206,8 +196,7 @@
         </service> <!-- Timetable -->
         <activity
             android:name="com.ulan.timetable.activities.MainActivity"
-            android:label="@string/timetable"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/timetable" />
         <!--
         <meta-data
                     android:name="preloaded_fonts"
