--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,16 +46,21 @@
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.AppIntroActivity" />
+        <activity
+            android:name=".ui.activities.AppIntroActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.RoomPlanActivity"
-            android:label="@string/room_plan" />
+            android:label="@string/room_plan"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.AboutActivity"
-            android:label="@string/title_activity_about" />
+            android:label="@string/title_activity_about"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.ProfileActivity"
-            android:label="@string/title_activity_profile" />
+            android:label="@string/title_activity_profile"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
@@ -74,11 +79,13 @@
         <activity
             android:name=".ui.activities.SignInActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_sign_in" />
+            android:label="@string/title_activity_sign_in"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.WebsiteActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -93,7 +100,9 @@
         <activity
             android:name=".ui.activities.ChoiceActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_choice" />
+            android:label="@string/title_activity_choice"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".ui.activities.SettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
@@ -193,15 +202,15 @@
             <meta-data
                 android:name="android.service.quicksettings.ACTIVE_TILE"
                 android:value="true" />
-        </service> <!-- Timetable -->
+        </service>
+
+
+        <!-- Timetable -->
         <activity
             android:name="com.ulan.timetable.activities.MainActivity"
-            android:label="@string/timetable" />
-        <!--
-        <meta-data
-                    android:name="preloaded_fonts"
-                    android:resource="@array/preloaded_fonts" />
-        -->
+            android:label="@string/timetable"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name="com.ulan.timetable.activities.HomeworksActivity"
             android:label="@string/homeworks" />
