--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -232,6 +232,9 @@
         <activity
             android:name="com.ulan.timetable.activities.ExamsActivity"
             android:label="@string/exams_activity_title" />
+        <activity
+            android:name="com.mikepenz.aboutlibraries.ui.LibsActivity"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
 
         <receiver
             android:name="com.ulan.timetable.utils.DailyReceiver"
@@ -249,7 +252,7 @@
         </receiver>
         <receiver
             android:name="com.ulan.timetable.utils.TurnOffReceiver"
-            android:enabled="true"></receiver>
+            android:enabled="true" />
     </application>
 
 </manifest>
