--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,6 @@ android {
 }
 
 def acraVersion = '5.5.0'
-def kotlin_version = '1.3.70'
-
 dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -81,13 +79,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
 
     implementation 'saschpe.android:customtabs:3.0.2'
     implementation "com.mikepenz:aboutlibraries:8.1.1"
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'org.jsoup:jsoup:1.13.1'
-    implementation 'apache-codec:commons-codec:1.2'
     implementation "ch.acra:acra-mail:$acraVersion"
     implementation "ch.acra:acra-dialog:$acraVersion"
     implementation "ch.acra:acra-notification:$acraVersion"
@@ -110,7 +107,11 @@ dependencies {
     implementation 'com.ritesh:ratiolayout:1.0.0'
     implementation 'com.github.stephenvinouze:shapetextdrawable:1.0.0'
     implementation 'com.github.AbdAllahAbdElFattah13:MapView:master-SNAPSHOT'
+
+    //Timetable
     implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
+    implementation 'com.github.razilsh:SQLite2XL:13a1d02361'
+    implementation 'org.apache.poi:poi:3.16'
 
     //Image Slider (see ColoRushFragment)
     //noinspection GradleDependency,NewerVersionAvailable
