--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
     repositories {
         google()
         jcenter()
@@ -28,7 +27,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath 'com.akaita.android:easylauncher:1.3.1'
         classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
