--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,7 @@ dependencies {
 
     //Timetable
     implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
-    implementation 'com.github.razilsh:SQLite2XL:13a1d02361'
+    implementation 'com.github.asdoi:SQLite2XL:e1b5e4d1cb'
     implementation 'org.apache.poi:poi:3.16'
 
     //Image Slider (see ColoRushFragment)
