--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
 
     implementation 'saschpe.android:customtabs:3.0.2'
     implementation "com.mikepenz:aboutlibraries:8.1.1"
@@ -87,8 +87,6 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation "ch.acra:acra-mail:$acraVersion"
     implementation "ch.acra:acra-dialog:$acraVersion"
-    implementation "ch.acra:acra-notification:$acraVersion"
-    implementation "ch.acra:acra-toast:$acraVersion"
     implementation 'de.cketti.library.changelog:ckchangelog:1.2.2'
     implementation 'ru.github.igla:ferriswheel:1.2'
     implementation 'com.github.IamIsPra:Sheriff:1.0.0'
@@ -102,7 +100,7 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
     implementation 'com.github.kabouzeid:app-theme-helper:1.3.10'
-    implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
+    implementation 'com.github.Pradyuman7:ChocoBar:V1.2'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.ritesh:ratiolayout:1.0.0'
     implementation 'com.github.stephenvinouze:shapetextdrawable:1.0.0'
@@ -111,6 +109,7 @@ dependencies {
     //Timetable
     implementation 'com.github.asdoi:ColorPickerDialog:a1d628430b'
     implementation 'com.github.asdoi:SQLite2XL:e1b5e4d1cb'
+    //noinspection GradleDependency
     implementation 'org.apache.poi:poi:3.16'
 
     //Image Slider (see ColoRushFragment)
