--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 bin/
 gen/
 out/
+app/release/
 
 # Gradle files
 .gradle/
@@ -45,8 +46,8 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+*.jks
+*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
