--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
 
     implementation 'saschpe.android:customtabs:3.0.2'
-    implementation "com.mikepenz:aboutlibraries:8.1.1"
+    implementation "com.mikepenz:aboutlibraries:8.1.2"
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation "ch.acra:acra-mail:$acraVersion"
@@ -105,11 +105,12 @@ dependencies {
     implementation 'com.ritesh:ratiolayout:1.0.0'
     implementation 'com.github.stephenvinouze:shapetextdrawable:1.0.0'
     implementation 'com.github.AbdAllahAbdElFattah13:MapView:master-SNAPSHOT'
+    implementation 'com.prof.rssparser:rssparser:2.1.2'
 
     //Timetable
     implementation 'com.github.asdoi:ColorPickerDialog:a1d628430b'
     implementation 'com.github.asdoi:SQLite2XL:-SNAPSHOT'
-    //noinspection GradleDependency
+    //noinspection NewerVersionAvailable,GradleDependency
     implementation 'org.apache.poi:poi:3.16'
 
     //Image Slider (see ColoRushFragment)
