--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -43,14 +42,14 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Light"
+        android:theme="@style/SplashTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="UnusedAttribute">
+
         <activity
             android:name=".ui.activities.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/app_name"
-            android:theme="@style/SplashTheme">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -66,8 +65,7 @@
         <activity
             android:name=".ui.activities.WebsiteActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -81,8 +79,8 @@
         </activity>
         <activity
             android:name=".ui.activities.SubstitutionTimeTableActivity"
-            android:label="@string/timetable_activity_title"
-            android:theme="@style/SplashTheme">
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/timetable_activity_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -92,32 +90,25 @@
         <activity
             android:name=".ui.activities.TeacherListActivity"
             android:label="@string/menu_teacher_list" />
-        <activity
-            android:name=".ui.activities.AppIntroActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.activities.AppIntroActivity" />
         <activity
             android:name=".ui.activities.RoomPlanActivity"
-            android:label="@string/room_plan"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/room_plan" />
         <activity
             android:name=".ui.activities.AboutActivity"
-            android:label="@string/title_activity_about"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_about" />
         <activity
             android:name=".ui.activities.ProfileActivity"
-            android:label="@string/title_activity_profile"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_profile" />
 
         <activity
             android:name=".ui.activities.SignInActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_sign_in"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_sign_in" />
         <activity
             android:name=".ui.activities.ChoiceActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_choice"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_choice" />
 
         <activity
             android:name=".ui.activities.SettingsActivity"
@@ -227,8 +218,7 @@
         <!-- Timetable -->
         <activity
             android:name="com.ulan.timetable.activities.MainActivity"
-            android:label="@string/timetable_activity_title"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/timetable_activity_title" />
 
         <activity
             android:name="com.ulan.timetable.activities.HomeworksActivity"
@@ -252,6 +242,7 @@
             android:label="@string/exams_activity_title" />
         <activity
             android:name="com.ulan.timetable.activities.SummaryActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/summary_activity_title" />
         <activity
             android:name="com.ulan.timetable.activities.SummarySettingsActivity"
