--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
     implementation 'androidx.biometric:biometric:1.0.1'
+    implementation 'joda-time:joda-time:2.10.6'
 
     implementation 'saschpe.android:customtabs:3.0.2'
     implementation "com.mikepenz:aboutlibraries:8.3.0"
